chore: :weary: Emang Lagi Gabut

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </li>
                     <li>
                         <p>Additional Reward</p>
-                        <img src="images/qr-code.png" alt="" class="img-thumbnail" style="max-width: 250px;">
+                        <img id="qr" src="images/1.png" alt="" class="img-thumbnail" style="max-width: 250px;">
                         <p id="hint" class="text-warning"></p>
                     </li>
                 </ol>
