--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                               </div>
                             </div>
                         </div>
-                        <p><a href="#" class="btn btn-primary">Redeem</a></p>
+                        <p><a href="https://shp.ee/dsghwad?smtt=0.0.3" class="btn btn-primary">Redeem</a></p>
                     </li>
                     <li>
                         <p>Additional Reward</p>
